syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package article;

option java_package = "com.column.proto";

service ArticleService {
  rpc GetArticles(google.protobuf.Empty) returns (GetArticlesResponse);
}

message GetArticlesResponse {
  repeated Article articles = 1;
}

message Article {
  int64 id = 1;
  string title = 2;
  string detail = 3;
  google.protobuf.Timestamp created = 4;
  google.protobuf.Timestamp updated = 5;
}
